--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,9 +9,9 @@
     tools:context=".vpn.SplashActivity">
 
     <ImageView
-        android:layout_width="192dp"
-        android:layout_height="192dp"
-        android:src="@mipmap/unitavpn_ic_launcher"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:src="@mipmap/unitavpn_ic_hq"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
