--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -232,12 +232,14 @@
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="40dp"
+        android:baselineAligned="false"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="@+id/login_background"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <LinearLayout
+            android:id="@+id/LLFacebookSignIn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="4dp"
@@ -246,7 +248,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageFacebook"
+                android:id="@+id/imageFacebookSignIn"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_margin="8dp"
@@ -268,6 +270,7 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/LLGoogleSignIn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
@@ -276,7 +279,7 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/imageGoogle"
+                android:id="@+id/imageGoogleSignIn"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_margin="8dp"
