--- a/app/src/main/res/drawable/background_premium_table_top_edge.xml
+++ b/app/src/main/res/drawable/background_premium_table_top_edge.xml
@@ -2,6 +2,11 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
+            <corners
+                android:topLeftRadius="10dp"
+                android:topRightRadius="10dp"
+                android:bottomLeftRadius="0dp"
+                android:bottomRightRadius="0dp" />
             <solid android:color="@color/lightBlue" />
             <stroke android:color="@color/lightBlue" />
         </shape>
