--- a/app/src/main/res/layout/activity_premium.xml
+++ b/app/src/main/res/layout/activity_premium.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,6 +7,10 @@
     android:layout_height="match_parent"
     android:background="@color/darkPurple"
     tools:context=".vpn.PremiumActivity">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clPremium"
@@ -69,6 +73,8 @@
         android:id="@+id/clPremiumTable"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,12 +84,46 @@
             android:id="@+id/TlPremiumTable"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginEnd="10dp"
             android:background="@drawable/background_premium"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
+
+            <TableRow
+                android:id="@+id/trPremiumTableTop"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/clPremiumTableTop"
+                    android:layout_width="match_parent"
+                    android:layout_height="10dp"
+                    android:layout_weight="7"
+                    android:paddingTop="5dp"
+
+                    android:background="@color/darkPurple"
+                    android:paddingBottom="5dp" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:paddingTop="5dp"
+                    android:background="@color/darkPurple"
+                    android:paddingBottom="5dp">
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/background_premium_table_top_edge"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp">
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </TableRow>
 
             <TableRow
                 android:id="@+id/trPremiumTable"
@@ -93,7 +133,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/clPremiumTable1"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="55dp"
                     android:layout_weight="7"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp" />
@@ -116,8 +156,7 @@
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintStart_toStartOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -128,6 +167,15 @@
                     android:background="@drawable/background_premium_table"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
+
+                    <ImageView
+                        android:id="@+id/ivPremiumIcon"
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:src="@drawable/ic_premium"
+                        app:layout_constraintBottom_toTopOf="@+id/tvPremium"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
                         android:id="@+id/tvPremium"
@@ -140,11 +188,11 @@
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
+                        app:layout_constraintStart_toStartOf="parent" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </TableRow>
+
 
             <View
                 android:layout_width="wrap_content"
@@ -159,7 +207,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
                     android:layout_weight="7"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
@@ -211,7 +259,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
                     android:layout_weight="7"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
@@ -291,7 +339,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
                     android:layout_weight="7"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
@@ -371,7 +419,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
                     android:layout_weight="7"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
@@ -444,7 +492,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
                     android:layout_weight="7"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
@@ -517,7 +565,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
                     android:layout_weight="7"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
@@ -580,7 +628,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
                     android:layout_weight="7"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
@@ -633,7 +681,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
                     android:layout_weight="7"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
@@ -713,8 +761,9 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
                     android:layout_weight="7"
+
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
 
@@ -793,7 +842,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
                     android:layout_weight="7"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
@@ -865,7 +914,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
                     android:layout_weight="7"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
@@ -928,7 +977,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
                     android:layout_weight="7"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
@@ -991,7 +1040,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
                     android:layout_weight="7"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
@@ -1044,7 +1093,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
                     android:layout_weight="7"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
@@ -1107,7 +1156,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
                     android:layout_weight="7"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
@@ -1170,7 +1219,7 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
                     android:layout_weight="7"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
@@ -1233,8 +1282,9 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="35dp"
                     android:layout_weight="7"
+                    android:background="@drawable/background_permium_table_bottomleft"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp">
 
@@ -1282,6 +1332,42 @@
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </TableRow>
+
+            <TableRow
+                android:id="@+id/trPremiumTableBottem"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/clPremiumTableBottem"
+                    android:layout_width="match_parent"
+                    android:layout_height="10dp"
+                    android:layout_weight="7"
+                    android:paddingTop="5dp"
+                    android:background="@color/darkPurple"
+                    android:paddingBottom="5dp" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:paddingTop="5dp"
+                    android:background="@color/darkPurple"
+                    android:paddingBottom="5dp">
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@drawable/background_premium_table_bottom_edge"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp">
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </TableRow>
+
         </TableLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -1486,6 +1572,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
