--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -156,7 +156,7 @@
             android:id="@+id/ivPremium"
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:src="@drawable/ic_premium"
+            android:src="@drawable/ic_premium_titanium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
