--- a/app/src/main/res/layout/fragment_menu.xml
+++ b/app/src/main/res/layout/fragment_menu.xml
@@ -159,7 +159,7 @@
             android:id="@+id/ivPremium"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:src="@drawable/ic_premium"
+            android:src="@drawable/ic_premium_titanium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
